Bug 1142668: Fix int32x4 to float32x4 conversion in asm.js; r=luke

--HG--
extra : rebase_source : c4f8c4fa44a7c6a90ffcd8aa20caeec10d0e8b9f